vscode上のlong型、Long型に対する警告への対応の修正